<resources>
    <string name="app_name">EventManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_event_creation">Create an event</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="need_an_account_register_now">Need an account? <u>Register now!</u></string>
    <string name="already_have_an_account">Already have an account? <u>Login!</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="username_hint">Username…</string>
    <string name="password_hint">Password…</string>
    <string name="first_name_hint">First Name…</string>
    <string name="last_name_hint">Last Name…</string>
    <string name="email_hint">Email…</string>
</resources>
