<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:textColor="@color/colorWhite"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="36dp"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:paddingVertical="12dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteHint" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingVertical="12dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteHint" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/need_an_account_register_now"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</FrameLayout>